--- a/data/Engine_Settings.ini
+++ b/data/Engine_Settings.ini
@@ -10,7 +10,7 @@ GameLogDetail=0
 SoundVolume=100
 MusicVolume=100
 ShowGameLogIfClickEndRound=True
-TutorialPassed=False
+TutorialPassed=True
 
 [Campanings]
 SHOC=True
