--- a/data/campanings/scs/scenarios/3Limansk/Settings.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Settings.ini
@@ -44,7 +44,7 @@ EventsRandom=True
 EventsRandomCanChange=True
 EventsStory=True
 EventsStoryCanChange=False
-CountZones=18
+CountZones=32
 Burst=True
 ActiveMutantsEveryRound=True
 ActiveMutantAddEveryPercent=5
@@ -57,7 +57,7 @@ End-Standart-Victory = True
 End-Standart-Lose = True
 End-Step-Victory = False
 End-Step-Lose = True
-EndStep = 36
+EndStep = 51
 UnitCostModificator = 50
 AmbientSoundTimer=30000
 SpyCostCRModificator=2
@@ -128,8 +128,8 @@ Achive24=true
 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; Фоны для окон	;;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;			
-MapBMP=data\campanings\scs\gfx\Барьер.bmp
-MapBT=data\campanings\scs\gfx\Барьер.bt
+MapBMP=data\campanings\scs\gfx\Лиманск.bmp
+MapBT=data\campanings\scs\gfx\Лиманск.bt
 World-Fon=data\campanings\shoc\gfx\interface\GK_MAP_FON.png
 World-Border-Top=data\campanings\shoc\gfx\interface\Border.png
 World-Border-Resources=data\campanings\shoc\gfx\interface\Border.png
