--- a/data/campanings/scs/scenarios/3Limansk/Achievements.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Achievements.ini
@@ -21,12 +21,12 @@
 Img=data\campanings\shoc\gfx\icons\achievements\Taked.png
 ImgLogoEnabled = data\campanings\scs\gfx\icons\achievements\unlock\5.png
 ImgLogoDisabled = data\campanings\scs\gfx\icons\achievements\lock\5.png
-Name= Быстрее молнии!
-Desc = Получено новое достижение! За 10 ходов захватить всю локацию
-Desc-Logo = За 10 ходов захватить всю локацию
+Name= -
+Desc = -
+Desc-Logo = -
 DifficultyLevel = Any
 Type = Conquest
-LimitStep = 10
+LimitStep = 1
 SoundFX = True
 ID = cs21
 SoundFXWayFile = data\sfx\message.mp3
@@ -35,16 +35,16 @@ Fraction1=0
 
 [Achiv-2]
 Img=data\campanings\shoc\gfx\icons\achievements\Taked.png
-ImgLogoEnabled = data\campanings\scs\gfx\icons\achievements\unlock\6.png
-ImgLogoDisabled = data\campanings\scs\gfx\icons\achievements\lock\6.png
+ImgLogoEnabled = data\campanings\scs\gfx\icons\achievements\unlock\9.png
+ImgLogoDisabled = data\campanings\scs\gfx\icons\achievements\lock\9.png
 Name= Выжить!
-Desc = Получено новое достижение! Захватить всю локацию за группировку Военные на уровне сложности Ветеран
-Desc-Logo = Захватить всю локацию за группировку Военные на уровне сложности Ветеран
-DifficultyLevel = Veteran
+Desc = Получено новое достижение! Захватить центр зоны за Чистое Небо!
+Desc-Logo = Захватить центр зоны за Чистое Небо
+DifficultyLevel = Any
 Type = Conquest
 LimitStep = 0
 SoundFX = True
-ID = cs22
+ID = cs69
 SoundFXWayFile = data\sfx\message.mp3
 NotWorkFractionCount=11
 Fraction1=0
@@ -61,43 +61,32 @@ Fraction11=17
 
 [Achiv-3]
 Img=data\campanings\shoc\gfx\icons\achievements\Taked.png
-ImgLogoEnabled = data\campanings\scs\gfx\icons\achievements\unlock\7.png
-ImgLogoDisabled = data\campanings\scs\gfx\icons\achievements\lock\7.png
-Name= Опасный враг!
-Desc = Получено новое достижение! Пережить уничтожение группировки Одиночки за группировку Монолит
-Desc-Logo = Пережить уничтожение группировки Одиночки за группировку Монолит
+ImgLogoEnabled = data\campanings\scs\gfx\icons\achievements\unlock\5.png
+ImgLogoDisabled = data\campanings\scs\gfx\icons\achievements\lock\5.png
+Name= -
+Desc = -
+Desc-Logo = -
 DifficultyLevel = Any
-Type = KillFraction
-TargetKillFraction = 1
-LimitStep = 0
+Type = Conquest
+LimitStep = 1
 SoundFX = True
-ID = cs23
+ID = cs21
 SoundFXWayFile = data\sfx\message.mp3
-NotWorkFractionCount=11
+NotWorkFractionCount=1
 Fraction1=0
-Fraction2=1
-Fraction3=2
-Fraction4=3
-Fraction5=4
-Fraction6=5
-Fraction7=7
-Fraction8=8
-Fraction9=9
-Fraction10=10
-Fraction11=17
 
 [Achiv-4]
 Img=data\campanings\shoc\gfx\icons\achievements\Taked.png
-ImgLogoEnabled = data\campanings\scs\gfx\icons\achievements\unlock\8.png
-ImgLogoDisabled = data\campanings\scs\gfx\icons\achievements\lock\8.png
-Name= Пришел, Увидел, Победил!
-Desc = Получено новое достижение! Захватить всю локацию на уровне сложности Мастер
-Desc-Logo = Захватить всю локацию на уровне сложности Мастер
-DifficultyLevel = Master
+ImgLogoEnabled = data\campanings\scs\gfx\icons\achievements\unlock\5.png
+ImgLogoDisabled = data\campanings\scs\gfx\icons\achievements\lock\5.png
+Name= -
+Desc = -
+Desc-Logo = -
+DifficultyLevel = Any
 Type = Conquest
-LimitStep = 0
+LimitStep = 1
 SoundFX = True
-ID = cs24
+ID = cs21
 SoundFXWayFile = data\sfx\message.mp3
 NotWorkFractionCount=1
 Fraction1=0
