--- a/data/campanings/scs/scenarios/3Limansk/Traders.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Traders.ini
@@ -15,7 +15,7 @@ World=True
 YourGroup=True
 OtherGroup=False
 BlackMarket=False
-Trader1=False
+Trader1=Лесник
 Trader2=False
 Trader3=False
 Trader4=False
@@ -92,10 +92,24 @@ NeedText=Только мультиплеер
 Coef=
 
 [Trader1]
-Name=
-Img=data\gfx\old\Face.png
-Need=
-Coef=
+Name= Лесник
+Img=data\campanings\shoc\gfx\icons\traders\Lesnik.gif
+Need=23
+NeedText=Что-бы поторговать с этим дедом вы должны контролировать лагерь у капера.
+Coef-Sell-Food=1,50
+Coef-Sell-Medic=1,50
+Coef-Sell-Supplies=1,50
+Coef-Sell-Parts=False
+Coef-Sell-Arts=False
+Coef-Sell-Weapon=1,50
+Coef-Sell-Armor=1,50
+Coef-Buy-Food=0,50
+Coef-Buy-Medic=0,50
+Coef-Buy-Supplies=0,50
+Coef-Buy-Parts=0,50
+Coef-Buy-Arts=0,50
+Coef-Buy-Armor=0,50
+Coef-Buy-Weapon=0,50
 
 [Trader2]
 Name=
