--- a/data/campanings/scs/scenarios/3Limansk/Traders.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Traders.ini
@@ -15,7 +15,7 @@ World=True
 YourGroup=True
 OtherGroup=False
 BlackMarket=False
-Trader1=Лесник
+Trader1=True
 Trader2=False
 Trader3=False
 Trader4=False
