--- a/data/campanings/scs/scenarios/3Limansk/Traders.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Traders.ini
@@ -93,7 +93,7 @@ Coef=
 
 [Trader1]
 Name= Лесник
-Img=data\campanings\shoc\gfx\icons\traders\Lesnik.gif
+Img=data\campanings\shoc\gfx\icons\traders\Lesnik.png
 Need=23
 NeedText=Что-бы поторговать с этим дедом вы должны контролировать лагерь у капера.
 Coef-Sell-Food=1,50
