--- a/data/campanings/scs/scenarios/3Limansk/Achievements.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Achievements.ini
@@ -21,14 +21,14 @@
 Img=data\campanings\shoc\gfx\icons\achievements\Taked.png
 ImgLogoEnabled = data\campanings\scs\gfx\icons\achievements\unlock\5.png
 ImgLogoDisabled = data\campanings\scs\gfx\icons\achievements\lock\5.png
-Name= -
-Desc = -
-Desc-Logo = -
+Name= Экстремальный прорыв
+Desc = Получено новое достижение! Захватить центр зоны менее чем за 17 ходов.
+Desc-Logo = Захватить центр зоны менее чем за 17 ходов.
 DifficultyLevel = Any
 Type = Conquest
-LimitStep = 1
+LimitStep = 17
 SoundFX = True
-ID = cs21
+ID = cs68
 SoundFXWayFile = data\sfx\message.mp3
 NotWorkFractionCount=1
 Fraction1=0
@@ -70,7 +70,7 @@ DifficultyLevel = Any
 Type = Conquest
 LimitStep = 1
 SoundFX = True
-ID = cs21
+ID = cs67
 SoundFXWayFile = data\sfx\message.mp3
 NotWorkFractionCount=1
 Fraction1=0
@@ -86,7 +86,7 @@ DifficultyLevel = Any
 Type = Conquest
 LimitStep = 1
 SoundFX = True
-ID = cs21
+ID = cs66
 SoundFXWayFile = data\sfx\message.mp3
 NotWorkFractionCount=1
 Fraction1=0
