--- a/data/campanings/scs/scenarios/3Limansk/Groups.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Groups.ini
@@ -13,8 +13,8 @@ Group5 = False
 Group6 = Monolith
 Group7 = False
 Group8 = False
-Group9 = ClearSky
-Group10 = False
+Group9 = Renegats
+Group10 = ClearSky
 Group11 = False
 Group12 = False
 Group13 = False
@@ -36,7 +36,7 @@ Group5 = Свобода
 Group6 = Монолит
 Group7 = Наёмники
 Group8 = Экологи
-Group9 = False
+Group9 = Ренегаты
 Group10 = Чистое Небо
 Group11 = False
 Group12 = False
@@ -534,7 +534,7 @@ Group5 = Freedom
 Group6 = Monolith
 Group7 = Freelancers
 Group8 = Scientists
-Group9 = Renegats
+Group9 = Monolith
 Group10 = ClearSky
 Group11 = Default
 Group12 = Default
@@ -567,7 +567,7 @@ Group8-Text = Стандартная победа
 Group9-Img = data\campanings\shoc\gfx\icons\ends\bandits_vic.png
 Group9-Text = Стандартная победа
 Group10-Img = data\campanings\scs\gfx\icons\ends\cs_vic.png
-Group10-Text = Стандартная победа
+Group10-Text = Чистое Небо остановило Стрелка, поэтому больше ничего не помешает зоне. Стоп, что это красное в неб..
 Group11-Img = data\campanings\shoc\gfx\icons\ends\def.png
 Group11-Text = Стандартная победа
 Group12-Img = data\campanings\shoc\gfx\icons\ends\def.png
@@ -647,7 +647,7 @@ Group8-Text = Зона это опасное место. После уничто
 Group9-Img = data\campanings\shoc\gfx\icons\ends\bandints_def.png
 Group9-Text = Ваша группировка полностью уничтожена. Поражение!
 Group10-Img = data\campanings\scs\gfx\icons\ends\cs_def.png
-Group10-Text = Ваша группировка полностью уничтожена. Поражение!
+Group10-Text = Штурмовой отряд Чистого неба во главе с Лебедевым был уничтожен. Никто не знает, что будет с группировкой дальше.
 Group11-Img = data\campanings\shoc\gfx\icons\ends\def.png
 Group11-Text = Ваша группировка полностью уничтожена. Поражение!
 Group12-Img = data\campanings\shoc\gfx\icons\ends\def.png
@@ -685,9 +685,9 @@ Group7-Text = Время истекло, Вы не смогли добиться
 Group8-Img = data\campanings\shoc\gfx\icons\ends\timer_def.png
 Group8-Text = Время истекло, Вы не смогли добиться контроля над Армейскими складами. Вы уволены. Поражение!
 Group9-Img = data\campanings\shoc\gfx\icons\ends\timer_def.png
-Group9-Text = Время истекло, Вы не смогли добиться контроля над Армейскими складами. Поражение!
+Group9-Text = Пацаны, у нас тут пробл...
 Group10-Img = data\campanings\shoc\gfx\icons\ends\timer_def.png
-Group10-Text = Время истекло, Вы не смогли добиться контроля над Армейскими складами. Поражение!
+Group10-Text = Большой выброс...
 Group11-Img = data\campanings\shoc\gfx\icons\ends\timer_def.png
 Group11-Text = Время истекло, Вы не смогли добиться контроля над Армейскими складами. Поражение!
 Group12-Img = data\campanings\shoc\gfx\icons\ends\timer_def.png
