--- a/data/campanings/scs/scenarios/3Limansk/Achievements.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Achievements.ini
@@ -40,7 +40,7 @@ Img=data\campanings\shoc\gfx\icons\achievements\Taked.png
 ImgLogoEnabled = data\campanings\scs\gfx\icons\achievements\unlock\9.png
 ImgLogoDisabled = data\campanings\scs\gfx\icons\achievements\lock\9.png
 Name= Выжить!
-Desc = Получено новое достижение! Захватить центр зоны за Чистое Небо!
+Desc = Получено новое достижение! Захватить центр зоны за Чистое Небо
 Desc-Logo = Захватить центр зоны за Чистое Небо
 DifficultyLevel = Any
 Type = Conquest
@@ -48,29 +48,20 @@ LimitStep = 0
 SoundFX = True
 ID = cs69
 SoundFXWayFile = data\sfx\message.mp3
-NotWorkFractionCount=11
+NotWorkFractionCount=1
 Fraction1=0
-Fraction2=1
-Fraction3=2
-Fraction4=4
-Fraction5=5
-Fraction6=6
-Fraction7=7
-Fraction8=8
-Fraction9=9
-Fraction10=10
-Fraction11=17
 
 [Achiv-3]
 Img=data\campanings\shoc\gfx\icons\achievements\Taked.png
-ImgLogoEnabled = data\campanings\scs\gfx\icons\achievements\unlock\5.png
-ImgLogoDisabled = data\campanings\scs\gfx\icons\achievements\lock\5.png
-Name= -
-Desc = -
-Desc-Logo = -
-DifficultyLevel = Any
-Type = Conquest
-LimitStep = 1
+ImgLogoEnabled = data\campanings\scs\gfx\icons\achievements\unlock\16.png
+ImgLogoDisabled = data\campanings\scs\gfx\icons\achievements\lock\16.png
+Name= Монолит=Молчать
+Desc = Получено новое достижение! Пережить уничтожение группировки монолит на сложности Мастер
+Desc-Logo = Пережить уничтожение группировки монолит на сложности Мастер
+DifficultyLevel = Master
+Type = KillFraction
+TargetKillFraction = 6
+LimitStep = 0
 SoundFX = True
 ID = cs67
 SoundFXWayFile = data\sfx\message.mp3
