--- a/data/campanings/scs/scenarios/3Limansk/Settings.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Settings.ini
@@ -84,7 +84,7 @@ Group5=False
 Group6=False
 Group7=False
 Group8=False
-Group9=False
+Group9=Renegats
 Group10=ClearSky
 Group11=False
 Group12=False
