--- a/data/campanings/scs/scenarios/3Limansk/Achievements.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Achievements.ini
@@ -48,8 +48,9 @@ LimitStep = 0
 SoundFX = True
 ID = cs69
 SoundFXWayFile = data\sfx\message.mp3
-NotWorkFractionCount=1
+NotWorkFractionCount=2
 Fraction1=0
+Fraction2=9
 
 [Achiv-3]
 Img=data\campanings\shoc\gfx\icons\achievements\Taked.png
@@ -72,7 +73,7 @@ Fraction1=0
 Img=data\campanings\shoc\gfx\icons\achievements\Taked.png
 ImgLogoEnabled = data\campanings\scs\gfx\icons\achievements\unlock\5.png
 ImgLogoDisabled = data\campanings\scs\gfx\icons\achievements\lock\5.png
-Name= -
+Name= Получено новое достижение! Захватить центр зоны за группировку "Ренегаты"
 Desc = -
 Desc-Logo = -
 DifficultyLevel = Any
@@ -81,5 +82,6 @@ LimitStep = 1
 SoundFX = True
 ID = cs66
 SoundFXWayFile = data\sfx\message.mp3
-NotWorkFractionCount=1
+NotWorkFractionCount=2
 Fraction1=0
+Fraction2=10
