--- a/data/campanings/scs/scenarios/3Limansk/Achievements.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Achievements.ini
@@ -71,11 +71,11 @@ Fraction1=0
 
 [Achiv-4]
 Img=data\campanings\shoc\gfx\icons\achievements\Taked.png
-ImgLogoEnabled = data\campanings\scs\gfx\icons\achievements\unlock\5.png
-ImgLogoDisabled = data\campanings\scs\gfx\icons\achievements\lock\5.png
-Name= Получено новое достижение! Захватить центр зоны за группировку "Ренегаты"
-Desc = -
-Desc-Logo = -
+ImgLogoEnabled = data\campanings\scs\gfx\icons\achievements\unlock\2.png
+ImgLogoDisabled = data\campanings\scs\gfx\icons\achievements\lock\2.png
+Name= Не только на Болотах
+Desc = Получено новое достижение! Захватить центр зоны за группировку "Ренегаты"
+Desc-Logo = Захватить центр зоны за группировку "Ренегаты"
 DifficultyLevel = Any
 Type = Conquest
 LimitStep = 1
