--- a/data/campanings/scs/scenarios/3Limansk/Groups.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Groups.ini
@@ -565,7 +565,7 @@ Group7-Text = Победа! Наёмники теперь контролирую
 Group8-Img = data\campanings\shoc\gfx\icons\ends\scientists_vic.png
 Group8-Text = Стандартная победа
 Group9-Img = data\campanings\shoc\gfx\icons\ends\bandits_vic.png
-Group9-Text = Стандартная победа
+Group9-Text = Ну чё, захватили пол зоны. Можно и побухать.
 Group10-Img = data\campanings\scs\gfx\icons\ends\cs_vic.png
 Group10-Text = Чистое Небо остановило Стрелка, поэтому больше ничего не помешает зоне. Стоп, что это красное в неб..
 Group11-Img = data\campanings\shoc\gfx\icons\ends\def.png
@@ -645,7 +645,7 @@ Group7-Text = Наёмники были полностью уничтожены 
 Group8-Img = data\campanings\shoc\gfx\icons\ends\scientists_def.png
 Group8-Text = Зона это опасное место. После уничтожения группы ученных, правительство решило, что больше не будет рисковать гражданскими. Вы уволены! Поражение!
 Group9-Img = data\campanings\shoc\gfx\icons\ends\bandints_def.png
-Group9-Text = Ваша группировка полностью уничтожена. Поражение!
+Group9-Text = Пахан из тебя никакущий, ты в курсе? Нас уничтожили, теперь путь в центр нам закрыт. Шуруй к своим Чистонебовцам.
 Group10-Img = data\campanings\scs\gfx\icons\ends\cs_def.png
 Group10-Text = Штурмовой отряд Чистого неба во главе с Лебедевым был уничтожен. Никто не знает, что будет с группировкой дальше.
 Group11-Img = data\campanings\shoc\gfx\icons\ends\def.png
@@ -685,9 +685,9 @@ Group7-Text = Время истекло, Вы не смогли добиться
 Group8-Img = data\campanings\shoc\gfx\icons\ends\timer_def.png
 Group8-Text = Время истекло, Вы не смогли добиться контроля над Армейскими складами. Вы уволены. Поражение!
 Group9-Img = data\campanings\shoc\gfx\icons\ends\timer_def.png
-Group9-Text = Пацаны, у нас тут пробл...
+Group9-Text = Вы не успели.
 Group10-Img = data\campanings\shoc\gfx\icons\ends\timer_def.png
-Group10-Text = Большой выброс...
+Group10-Text = Вы не успели, Стрелок добрался до ЧАЭС.
 Group11-Img = data\campanings\shoc\gfx\icons\ends\timer_def.png
 Group11-Text = Время истекло, Вы не смогли добиться контроля над Армейскими складами. Поражение!
 Group12-Img = data\campanings\shoc\gfx\icons\ends\timer_def.png
