--- a/data/campanings/scs/scenarios/3Limansk/Groups.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Groups.ini
@@ -535,7 +535,7 @@ Group6 = Monolith
 Group7 = Freelancers
 Group8 = Scientists
 Group9 = Monolith
-Group10 = ClearSky
+Group10 = Stalkers
 Group11 = Default
 Group12 = Default
 Group13 = Default
