Начал делать поддержку 0.9.5.5

--- a/data/campanings/scs/scenarios/3Limansk/AI.ini
+++ b/data/campanings/scs/scenarios/3Limansk/AI.ini
@@ -26,7 +26,7 @@
 ;; Economic-CanEveryStepUseCheat - использует чит кажое указанное число ходов									;;
 ;; Economic-CheatMoney - сумма денег используемая в чите											;;
 ;; Economic-CanBuyResources - может покупать ресурсы												;;
-;; Economic-CountTagetBuyResources - число названий ресов для покупки										;;
+;; Economic-CountTargetBuyResources - число названий ресов для покупки										;;
 ;; Economic-TargetBuyResource-X - название реса для покупки											;;
 ;; Economic-TargetBuyResource-1-CountModificator - модификатор, который умножается на требуемое число ресурса у ИИ (требуемое захаркодено).	;;
 ;; 	Если число ресурсов меньше полученного числа, то бот докупает ресурс									;;
@@ -63,7 +63,7 @@ PlayerTrade-BotCanTradeIfNeutral=True
 PlayerTrade-BotCanTradeIfAlliance=True
 Atack-AtackAnyWay = False
 Atack-UseConquest = False
-KillMutants-LimitActive = 5
+KillMutants-LimitActive = 10
 KillMutants-AtackAnyWay = True
 BuyUnitForGuardBorderMotivationModificator = 2
 BuyUnitForAtackMotivationModificator = 2
@@ -80,7 +80,7 @@ Economic-CanUseCheat = True
 Economic-CanEveryStepUseCheat = 2
 Economic-CheatMoney = 250
 Economic-CanBuyResources = True
-Economic-CountTagetBuyResources = 3
+Economic-CountTargetBuyResources = 3
 Economic-TargetBuyResource-1 = Food
 Economic-TargetBuyResource-1-CountModificator = 3
 Economic-TargetBuyResource-2 = Supplies
@@ -101,6 +101,60 @@ Diplomacy-ModificatorWithoutBorderForAlliance = 2
 Diplomacy-ModificatorWithBorderForBrokenAlliance = 2
 Diplomacy-ModificatorWithoutBorderForBrokenAlliance = 4
 
+[Bandits]
+CountBlocks = 8
+Block1 = Economic
+Block2 = BuyGarisson
+Block3 = KillMutants
+Block4 = Economic
+Block5 = BuyAtackArmy
+Block6 = Atack
+Block7 = BuyBorderGuard
+Block8 = Diplomacy
+PlayerCanTradeWithThisBot=True
+PlayerTrade-BotCanTradeIfWar=True
+PlayerTrade-BotCanTradeIfNeutral=True
+PlayerTrade-BotCanTradeIfAlliance=True
+Atack-AtackAnyWay = False
+Atack-UseConquest = False
+KillMutants-LimitActive = 15
+KillMutants-AtackAnyWay = False
+BuyUnitForGuardBorderMotivationModificator = 2
+BuyUnitForAtackMotivationModificator = 3
+Economic-CanSearchArts = True
+Economic-CountTagetSellResources = 6
+Economic-TargetSellResource-1 = LowParts
+Economic-TargetSellResource-2 = MediumParts
+Economic-TargetSellResource-3 = HightParts
+Economic-TargetSellResource-4 = LowArts
+Economic-TargetSellResource-5 = MediumArts
+Economic-TargetSellResource-6 = HightArts
+Economic-SellGoodsIfThisNotUseUnits = True
+Economic-CanUseCheat = True
+Economic-CanEveryStepUseCheat = 2
+Economic-CheatMoney = 1500
+Economic-CanBuyResources = True
+Economic-CountTargetBuyResources = 3
+Economic-TargetBuyResource-1 = Food
+Economic-TargetBuyResource-1-CountModificator = 3
+Economic-TargetBuyResource-2 = Supplies
+Economic-TargetBuyResource-2-CountModificator = 2
+Economic-TargetBuyResource-3 = Medic
+Economic-TargetBuyResource-3-CountModificator = 2
+Economic-BuyGoodsIfThisUseUnits = True
+Diplomacy-CanEveryStep = 3
+Diplomacy-CanDeaclareMoreOneWar = True
+Diplomacy-DeclareWarIfNoBorder = False
+Diplomacy-BreakAllianceIfNoBorder = False
+Diplomacy-ModificatorWithBorderForWar = 2
+Diplomacy-ModificatorWithoutBorderForWar = 3
+Diplomacy-ModificatorWithBorderForNeutral = 2
+Diplomacy-ModificatorWithoutBorderForNeutral = 1
+Diplomacy-ModificatorWithBorderForAlliance = 3
+Diplomacy-ModificatorWithoutBorderForAlliance = 2
+Diplomacy-ModificatorWithBorderForBrokenAlliance = 2
+Diplomacy-ModificatorWithoutBorderForBrokenAlliance = 3
+
 [Soldiers]
 CountBlocks = 7
 Block1 = Economic
@@ -116,7 +170,7 @@ PlayerTrade-BotCanTradeIfNeutral=False
 PlayerTrade-BotCanTradeIfAlliance=True
 Atack-AtackAnyWay = True
 Atack-UseConquest = True
-KillMutants-LimitActive = 3
+KillMutants-LimitActive = 5
 KillMutants-AtackAnyWay = True
 BuyUnitForGuardBorderMotivationModificator = 2
 BuyUnitForAtackMotivationModificator = 2
@@ -131,9 +185,9 @@ Economic-TargetSellResource-6 = HightArts
 Economic-SellGoodsIfThisNotUseUnits = True
 Economic-CanUseCheat = True
 Economic-CanEveryStepUseCheat = 2
-Economic-CheatMoney = 500
+Economic-CheatMoney = 5000
 Economic-CanBuyResources = True
-Economic-CountTagetBuyResources = 3
+Economic-CountTargetBuyResources = 3
 Economic-TargetBuyResource-1 = Food
 Economic-TargetBuyResource-1-CountModificator = 5
 Economic-TargetBuyResource-2 = Supplies
@@ -184,10 +238,10 @@ Economic-TargetSellResource-5 = MediumArts
 Economic-TargetSellResource-6 = HightArts
 Economic-SellGoodsIfThisNotUseUnits = True
 Economic-CanUseCheat = True
-Economic-CanEveryStepUseCheat = 6
-Economic-CheatMoney = 250
+Economic-CanEveryStepUseCheat = 2
+Economic-CheatMoney = 750
 Economic-CanBuyResources = True
-Economic-CountTagetBuyResources = 3
+Economic-CountTargetBuyResources = 3
 Economic-TargetBuyResource-1 = Food
 Economic-TargetBuyResource-1-CountModificator = 3
 Economic-TargetBuyResource-2 = Supplies
@@ -224,7 +278,7 @@ PlayerTrade-BotCanTradeIfNeutral=True
 PlayerTrade-BotCanTradeIfAlliance=True
 Atack-AtackAnyWay = True
 Atack-UseConquest = True
-KillMutants-LimitActive = 5
+KillMutants-LimitActive = 10
 KillMutants-AtackAnyWay = True
 BuyUnitForGuardBorderMotivationModificator = 2
 BuyUnitForAtackMotivationModificator = 2
@@ -238,10 +292,10 @@ Economic-TargetSellResource-5 = MediumArts
 Economic-TargetSellResource-6 = HightArts
 Economic-SellGoodsIfThisNotUseUnits = True
 Economic-CanUseCheat = True
-Economic-CanEveryStepUseCheat = 2
-Economic-CheatMoney = 500
+Economic-CanEveryStepUseCheat = 4
+Economic-CheatMoney = 750
 Economic-CanBuyResources = True
-Economic-CountTagetBuyResources = 3
+Economic-CountTargetBuyResources = 3
 Economic-TargetBuyResource-1 = Food
 Economic-TargetBuyResource-1-CountModificator = 3
 Economic-TargetBuyResource-2 = Supplies
@@ -278,7 +332,7 @@ PlayerTrade-BotCanTradeIfNeutral=False
 PlayerTrade-BotCanTradeIfAlliance=True
 Atack-AtackAnyWay = True
 Atack-UseConquest = True
-KillMutants-LimitActive = 15
+KillMutants-LimitActive = 20
 KillMutants-AtackAnyWay = False
 BuyUnitForGuardBorderMotivationModificator = 2
 BuyUnitForAtackMotivationModificator = 2
@@ -293,9 +347,9 @@ Economic-TargetSellResource-6 = HightArts
 Economic-SellGoodsIfThisNotUseUnits = True
 Economic-CanUseCheat = True
 Economic-CanEveryStepUseCheat = 2
-Economic-CheatMoney = 2500
+Economic-CheatMoney = -7500
 Economic-CanBuyResources = True
-Economic-CountTagetBuyResources = 3
+Economic-CountTargetBuyResources = 3
 Economic-TargetBuyResource-1 = Food
 Economic-TargetBuyResource-1-CountModificator = 3
 Economic-TargetBuyResource-2 = Supplies
@@ -333,7 +387,7 @@ PlayerTrade-BotCanTradeIfNeutral=True
 PlayerTrade-BotCanTradeIfAlliance=True
 Atack-AtackAnyWay = True
 Atack-UseConquest = True
-KillMutants-LimitActive = 15
+KillMutants-LimitActive = 20
 KillMutants-AtackAnyWay = False
 BuyUnitForGuardBorderMotivationModificator = 2
 BuyUnitForAtackMotivationModificator = 2
@@ -347,10 +401,10 @@ Economic-TargetSellResource-5 = MediumArts
 Economic-TargetSellResource-6 = HightArts
 Economic-SellGoodsIfThisNotUseUnits = True
 Economic-CanUseCheat = True
-Economic-CanEveryStepUseCheat = 5
-Economic-CheatMoney = 100
+Economic-CanEveryStepUseCheat = 2
+Economic-CheatMoney = 5000
 Economic-CanBuyResources = True
-Economic-CountTagetBuyResources = 3
+Economic-CountTargetBuyResources = 3
 Economic-TargetBuyResource-1 = Food
 Economic-TargetBuyResource-1-CountModificator = 2
 Economic-TargetBuyResource-2 = Supplies
@@ -370,6 +424,168 @@ Diplomacy-ModificatorWithBorderForAlliance = 3
 Diplomacy-ModificatorWithoutBorderForAlliance = 2
 Diplomacy-ModificatorWithBorderForBrokenAlliance = 2
 Diplomacy-ModificatorWithoutBorderForBrokenAlliance = 3
+
+[Scientists]
+CountBlocks = 9
+Block1 = Economic
+Block2 = BuyGarisson
+Block3 = KillMutants
+Block4 = Economic
+Block5 = BuyAtackArmy
+Block6 = Atack
+Block7 = Economic
+Block8 = BuyBorderGuard
+Block9 = Diplomacy
+PlayerCanTradeWithThisBot=True
+PlayerTrade-BotCanTradeIfWar=False
+PlayerTrade-BotCanTradeIfNeutral=True
+PlayerTrade-BotCanTradeIfAlliance=True
+Atack-AtackAnyWay = False
+Atack-UseConquest = False
+KillMutants-LimitActive = 25
+KillMutants-AtackAnyWay = False
+BuyUnitForGuardBorderMotivationModificator = 2
+BuyUnitForAtackMotivationModificator = 2
+Economic-CanSearchArts = True
+Economic-CountTagetSellResources = 6
+Economic-TargetSellResource-1 = LowParts
+Economic-TargetSellResource-2 = MediumParts
+Economic-TargetSellResource-3 = HightParts
+Economic-TargetSellResource-4 = LowArts
+Economic-TargetSellResource-5 = MediumArts
+Economic-TargetSellResource-6 = HightArts
+Economic-SellGoodsIfThisNotUseUnits = True
+Economic-CanUseCheat = True
+Economic-CanEveryStepUseCheat = 2
+Economic-CheatMoney = 5000
+Economic-CanBuyResources = True
+Economic-CountTargetBuyResources = 3
+Economic-TargetBuyResource-1 = Food
+Economic-TargetBuyResource-1-CountModificator = 2
+Economic-TargetBuyResource-2 = Supplies
+Economic-TargetBuyResource-2-CountModificator = 2
+Economic-TargetBuyResource-3 = Medic
+Economic-TargetBuyResource-3-CountModificator = 2
+Economic-BuyGoodsIfThisUseUnits = True
+Diplomacy-CanEveryStep = 3
+Diplomacy-CanDeaclareMoreOneWar = True
+Diplomacy-DeclareWarIfNoBorder = False
+Diplomacy-BreakAllianceIfNoBorder = False
+Diplomacy-ModificatorWithBorderForWar = 3
+Diplomacy-ModificatorWithoutBorderForWar = 5
+Diplomacy-ModificatorWithBorderForNeutral = 1
+Diplomacy-ModificatorWithoutBorderForNeutral = 1
+Diplomacy-ModificatorWithBorderForAlliance = 2
+Diplomacy-ModificatorWithoutBorderForAlliance = 2
+Diplomacy-ModificatorWithBorderForBrokenAlliance = 2
+Diplomacy-ModificatorWithoutBorderForBrokenAlliance = 2
+
+[Renegats]
+CountBlocks = 7
+Block1 = Economic
+Block2 = BuyGarisson
+Block3 = KillMutants
+Block4 = BuyAtackArmy
+Block5 = Atack
+Block6 = BuyBorderGuard
+Block7 = Diplomacy
+PlayerCanTradeWithThisBot=True
+PlayerTrade-BotCanTradeIfWar=True
+PlayerTrade-BotCanTradeIfNeutral=True
+PlayerTrade-BotCanTradeIfAlliance=True
+Atack-AtackAnyWay = False
+Atack-UseConquest = False
+KillMutants-LimitActive = 15
+KillMutants-AtackAnyWay = False
+BuyUnitForGuardBorderMotivationModificator = 2
+BuyUnitForAtackMotivationModificator = 3
+Economic-CanSearchArts = True
+Economic-CountTagetSellResources = 6
+Economic-TargetSellResource-1 = LowParts
+Economic-TargetSellResource-2 = MediumParts
+Economic-TargetSellResource-3 = HightParts
+Economic-TargetSellResource-4 = LowArts
+Economic-TargetSellResource-5 = MediumArts
+Economic-TargetSellResource-6 = HightArts
+Economic-SellGoodsIfThisNotUseUnits = True
+Economic-CanUseCheat = True
+Economic-CanEveryStepUseCheat = 2
+Economic-CheatMoney = 750
+Economic-CanBuyResources = True
+Economic-CountTargetBuyResources = 3
+Economic-TargetBuyResource-1 = Food
+Economic-TargetBuyResource-1-CountModificator = 3
+Economic-TargetBuyResource-2 = Supplies
+Economic-TargetBuyResource-2-CountModificator = 2
+Economic-TargetBuyResource-3 = Medic
+Economic-TargetBuyResource-3-CountModificator = 2
+Economic-BuyGoodsIfThisUseUnits = True
+Diplomacy-CanEveryStep = 3
+Diplomacy-CanDeaclareMoreOneWar = True
+Diplomacy-DeclareWarIfNoBorder = False
+Diplomacy-BreakAllianceIfNoBorder = False
+Diplomacy-ModificatorWithBorderForWar = 2
+Diplomacy-ModificatorWithoutBorderForWar = 3
+Diplomacy-ModificatorWithBorderForNeutral = 2
+Diplomacy-ModificatorWithoutBorderForNeutral = 1
+Diplomacy-ModificatorWithBorderForAlliance = 3
+Diplomacy-ModificatorWithoutBorderForAlliance = 2
+Diplomacy-ModificatorWithBorderForBrokenAlliance = 2
+Diplomacy-ModificatorWithoutBorderForBrokenAlliance = 3
+
+[ClearSky]
+CountBlocks = 8
+Block1 = Economic
+Block2 = BuyGarisson
+Block3 = KillMutants
+Block4 = Economic
+Block5 = BuyAtackArmy
+Block6 = Atack
+Block7 = BuyBorderGuard
+Block8 = Diplomacy
+PlayerCanTradeWithThisBot=True
+PlayerTrade-BotCanTradeIfWar=False
+PlayerTrade-BotCanTradeIfNeutral=True
+PlayerTrade-BotCanTradeIfAlliance=True
+Atack-AtackAnyWay = False
+Atack-UseConquest = False
+KillMutants-LimitActive = 5
+KillMutants-AtackAnyWay = True
+BuyUnitForGuardBorderMotivationModificator = 2
+BuyUnitForAtackMotivationModificator = 2
+Economic-CanSearchArts = True
+Economic-CountTagetSellResources = 6
+Economic-TargetSellResource-1 = LowParts
+Economic-TargetSellResource-2 = MediumParts
+Economic-TargetSellResource-3 = HightParts
+Economic-TargetSellResource-4 = LowArts
+Economic-TargetSellResource-5 = MediumArts
+Economic-TargetSellResource-6 = HightArts
+Economic-SellGoodsIfThisNotUseUnits = True
+Economic-CanUseCheat = True
+Economic-CanEveryStepUseCheat = 2
+Economic-CheatMoney = 250
+Economic-CanBuyResources = True
+Economic-CountTargetBuyResources = 3
+Economic-TargetBuyResource-1 = Food
+Economic-TargetBuyResource-1-CountModificator = 3
+Economic-TargetBuyResource-2 = Supplies
+Economic-TargetBuyResource-2-CountModificator = 2
+Economic-TargetBuyResource-3 = Medic
+Economic-TargetBuyResource-3-CountModificator = 2
+Economic-BuyGoodsIfThisUseUnits = True
+Diplomacy-CanEveryStep = 3
+Diplomacy-CanDeaclareMoreOneWar = True
+Diplomacy-DeclareWarIfNoBorder = False
+Diplomacy-BreakAllianceIfNoBorder = False
+Diplomacy-ModificatorWithBorderForWar = 2
+Diplomacy-ModificatorWithoutBorderForWar = 3
+Diplomacy-ModificatorWithBorderForNeutral = 2
+Diplomacy-ModificatorWithoutBorderForNeutral = 1
+Diplomacy-ModificatorWithBorderForAlliance = 3
+Diplomacy-ModificatorWithoutBorderForAlliance = 2
+Diplomacy-ModificatorWithBorderForBrokenAlliance = 2
+Diplomacy-ModificatorWithoutBorderForBrokenAlliance = 4
 
 [Default]
 CountBlocks = 6
@@ -402,7 +618,7 @@ Economic-CanUseCheat = True
 Economic-CanEveryStepUseCheat = 2
 Economic-CheatMoney = 5000
 Economic-CanBuyResources = True
-Economic-CountTagetBuyResources = 3
+Economic-CountTargetBuyResources = 3
 Economic-TargetBuyResource-1 = Food
 Economic-TargetBuyResource-1-CountModificator = 1
 Economic-TargetBuyResource-2 = Supplies
@@ -425,17 +641,17 @@ Diplomacy-ModificatorWithoutBorderForBrokenAlliance = 3
 
 [Zombie]
 CountBlocks = 4
-Block1 = Economic
+Block1 = Atack
 Block2 = BuyGarisson
 Block3 = BuyAtackArmy
-Block4 = Atack
+Block4 = Economic
 PlayerCanTradeWithThisBot=False
 PlayerTrade-BotCanTradeIfWar=False
 PlayerTrade-BotCanTradeIfNeutral=False
 PlayerTrade-BotCanTradeIfAlliance=False
 Atack-AtackAnyWay = True
 Atack-UseConquest = True
-KillMutants-LimitActive = 25
+KillMutants-LimitActive = 0
 KillMutants-AtackAnyWay = False
 BuyUnitForGuardBorderMotivationModificator = 1
 BuyUnitForAtackMotivationModificator = 2
@@ -452,7 +668,7 @@ Economic-CanUseCheat = True
 Economic-CanEveryStepUseCheat = 2
 Economic-CheatMoney = 5000
 Economic-CanBuyResources = True
-Economic-CountTagetBuyResources = 3
+Economic-CountTargetBuyResources = 3
 Economic-TargetBuyResource-1 = Food
 Economic-TargetBuyResource-1-CountModificator = 2
 Economic-TargetBuyResource-2 = Supplies
@@ -498,7 +714,7 @@ Economic-CanUseCheat = True
 Economic-CanEveryStepUseCheat = 2
 Economic-CheatMoney = 10000
 Economic-CanBuyResources = True
-Economic-CountTagetBuyResources = 3
+Economic-CountTargetBuyResources = 3
 Economic-TargetBuyResource-1 = Food
 Economic-TargetBuyResource-1-CountModificator = 5
 Economic-TargetBuyResource-2 = Supplies
