--- a/data/campanings/scs/scenarios/3Limansk/Groups.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Groups.ini
@@ -152,6 +152,27 @@ Group16 = False
 Group17 = data\campanings\shoc\gfx\icons\units\Zombie\
 Group18 = data\campanings\shoc\gfx\icons\units\Zombie\
 
+[Groups-Description]
+Group0 = Группировка доступна только под дебагом
+Group1 = False
+Group2 = False
+Group3 = False
+Group4 = False
+Group5 = False
+Group6 = False
+Group7 = False
+Group8 = False
+Group9 = Ренегаты – Остатки группировки, которая однажды чуть не уничтожила группировку Чистое Небо. Сейчас они перегруппировались, и заняли мост в Лиманск.
+Group10 = Чистое небо – Группировка, которая пробивается к центру зоны, дабы не дать стрелку добратся для ЧАЭС. Сейчас они находятся на юге Рыжего леса, а их цель - пройти до ЧАЭС-2.
+Group11 = False
+Group12 = False
+Group13 = False
+Group14 = False
+Group15 = False
+Group16 = False
+Group17 = Группировка доступна только под дебагом
+Group18 = Группировка доступна только под дебагом
+
 [Groups-Diplomacy-IconsMap]
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; Значок группировки на глобальной карте ;;
@@ -544,6 +565,54 @@ Group15 = Default
 Group16 = Default
 Group17 = Zombie
 Group18 = None
+
+[Groups-RatingShow]
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;; Отображение группировки в окне рейтинга группировок ;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+Group0 = False
+Group1 = False
+Group2 = False
+Group3 = False
+Group4 = False
+Group5 = False
+Group6 = True
+Group7 = False
+Group8 = False
+Group9 = True
+Group10 = True
+Group11 = False
+Group12 = False
+Group13 = False
+Group14 = False
+Group15 = False
+Group16 = False
+Group17 = False
+Group18 = False
+
+[Groups-ImmunityForMutantsRampage]
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;; У каких группировков мутанты точно не будут буйствовать ;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+Group0 = True
+Group1 = False
+Group2 = False
+Group3 = False
+Group4 = False
+Group5 = False
+Group6 = False
+Group7 = False
+Group8 = False
+Group9 = False
+Group10 = False
+Group11 = False
+Group12 = False
+Group13 = False
+Group14 = False
+Group15 = False
+Group16 = False
+Group17 = False
+Group18 = True
 
 [Groups-End-Standart-Victory]
 Group0-Img = data\campanings\shoc\gfx\icons\ends\mutants_vic.png
