--- a/data/campanings/scs/scenarios/3Limansk/Main.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Main.ini
@@ -53,10 +53,13 @@
 
 [Scenario]
 CampaningName=scs
-ScenarioName=3Limansk
+ScenarioName=1story
 Step=1
-RandomEvents = True
-StoryEvents = False
+RandomEventsEnabled = True
+StoryEventsEnabled = True
+BurstEnabled = True
+MoveArmyThroughAllyEnabled = True
+AtackArmyThroughtAllyEnabled = True
 PlayerGroup =
 
 [EventFlag]
