--- a/data/campanings/scs/scenarios/3Limansk/Traders.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Traders.ini
@@ -25,6 +25,10 @@ Trader5=False
 Trader6=False
 Trader7=False
 Trader8=False
+Trader9=False
+Trader10=False
+Trader11=False
+Trader12=False
 
 [World]
 Name= Внешний мир
@@ -154,3 +158,35 @@ Name=
 Img=data\gfx\old\Face.png
 Need=
 Coef=
+
+[Trader9]
+Name=
+Img=data\gfx\old\Face.png
+Need=
+Coef=
+StartStep=0
+EndStep=0
+
+[Trader10]
+Name=
+Img=data\gfx\old\Face.png
+Need=
+Coef=
+StartStep=0
+EndStep=0
+
+[Trader11]
+Name=
+Img=data\gfx\old\Face.png
+Need=
+Coef=
+StartStep=0
+EndStep=0
+
+[Trader12]
+Name=
+Img=data\gfx\old\Face.png
+Need=
+Coef=
+StartStep=0
+EndStep=0
