--- a/data/campanings/scs/scenarios/3Limansk/Upgrades.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Upgrades.ini
@@ -1,5 +1,16 @@
 ﻿;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-;; Технологии. Число технологий не менять. Технические названия в [] не менять! ;;
+;; Улучшение. Число улучшений хранится в Settings.ini				;;
+;; Технические названия в [] указывать как Upgrade-X, где X число по порядку	;;
+;; Type - тип улучшения. Бывают:						;;
+;;    UpRecruitsCountComming - это + к приросту каждого рекрута			;;
+;;    UpChanceSearchArtsCount - это + к шансу поиска арта			;;
+;;    UpCRCountComming - это + к приросту КР группировки			;;
+;;    UpPartCountAfterKillMuntant - это * к трофеям от мутантов			;;
+;;    UpCashCountAfterKillStalker - это * к хабару с убитых сталкеров		;;
+;;    UpChanceCountForReconnaissance - это + к шансу успеха разведчика		;;
+;;    DownCountCRForKillMutants - это - к стоимости зачистки в КР		;;
+;;    DownCountCRForMoveAndBattle - это - к стоимости Передислокации и Баттлов	;;
+;;    DownCountCRForReconnaissance - это / к стомости отправки разведчика	;;
 ;; Name - игровое название технологии отображаемое в интерфейсе игры		;;
 ;; Desc - Описание улучшения 							;;
 ;; Cost_Comands - число требуемых КР для изучения				;;
@@ -8,9 +19,11 @@
 ;; Need - номер технологии, которая требуется для изучения			;;
 ;; Logo - изображение технологии						;;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
 [Upgrade-1]
+Type=UpRecruitsCountComming
 Name=Вербовка
-Desc=Необходимо больше бойцов? Распространите эту информацию среди своих бойцов, возможно, у них есть знакомые, которые вступили бы в вашу группировку. Дает +1 к каждому типу рекрутов каждой территории, где эти рекруты появляются ежеходно.
+Desc=Необходимо больше бойцов? Распространите эту информацию среди своих бойцов, возможно, у них есть знакомые, которые вступили бы в вашу группировку. Дает +1 к каждому типу рекрутов каждой территории, где эти рекруты появляются ежеходно (Суммируется с другими аналогичными улучшениями)
 Cost_Comands=5
 Cost_Money=1000
 Bonus=1
@@ -19,9 +32,11 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\1.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\1-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\1-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\1-PurchasedActive.png
+
 [Upgrade-2]
+Type=UpRecruitsCountComming
 Name=Пропаганда
-Desc=Написать на заборе краской? А что, хорошая идея! Дает +1 к каждому типу рекрутов каждой территории, где эти рекруты появляются ежеходно.
+Desc=Написать на заборе краской? А что, хорошая идея! Дает +1 к каждому типу рекрутов каждой территории, где эти рекруты появляются ежеходно (Суммируется с другими аналогичными улучшениями)
 Cost_Comands=8
 Cost_Money=1500
 Bonus=1
@@ -30,9 +45,11 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\2.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\2-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\2-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\2-PurchasedActive.png
+
 [Upgrade-3]
+Type=UpRecruitsCountComming
 Name=Качественная пропаганда
-Desc=Плакаты, листовки. Всё как по мануалу! Дает +1 к каждому типу рекрутов каждой территории, где эти рекруты появляются ежеходно.
+Desc=Плакаты, листовки. Всё как по мануалу! Дает +1 к каждому типу рекрутов каждой территории, где эти рекруты появляются ежеходно (Суммируется с другими аналогичными улучшениями)
 Cost_Comands=10
 Cost_Money=2000
 Bonus=1
@@ -41,9 +58,11 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\3.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\3-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\3-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\3-PurchasedActive.png
+
 [Upgrade-4]
+Type=UpRecruitsCountComming
 Name=Расширенная пропаганда
-Desc=Современные технологии. Спам в общие чат каналы с призывом о вступлении в группировку. Дает +1 к каждому типу рекрутов каждой территории, где эти рекруты появляются ежеходно.
+Desc=Современные технологии. Спам в общие чат каналы с призывом о вступлении в группировку. Дает +1 к каждому типу рекрутов каждой территории, где эти рекруты появляются ежеходно (Суммируется с другими аналогичными улучшениями)
 Cost_Comands=10
 Cost_Money=3000
 Bonus=1
@@ -52,9 +71,11 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\4.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\4-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\4-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\4-PurchasedActive.png
+
 [Upgrade-5]
+Type=UpRecruitsCountComming
 Name=Целевая пропаганда
-Desc=Парочка чат ботов-спамеров для общей сталкерской сети ПДА, которые пишут в личку сталкерам. Идеально. Дает +1 к каждому типу рекрутов каждой территории, где эти рекруты появляются ежеходно.
+Desc=Парочка чат ботов-спамеров для общей сталкерской сети ПДА, которые пишут в личку сталкерам. Идеально. Дает +1 к каждому типу рекрутов каждой территории, где эти рекруты появляются ежеходно (Суммируется с другими аналогичными улучшениями)
 Cost_Comands=12
 Cost_Money=4000
 Bonus=1
@@ -63,9 +84,11 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\5.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\5-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\5-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\5-PurchasedActive.png
+
 [Upgrade-6]
+Type=UpChanceSearchArtsCount
 Name=Собирательство
-Desc=Обучить бойцов тщательно осматривать свой путь, возможно, где за валяющимся старым деревом будет что-то ценное. Увеличивает успех поиска артефактов на 3%
+Desc=Обучить бойцов тщательно осматривать свой путь, возможно, где за валяющимся старым деревом будет что-то ценное. Увеличивает успех поиска артефактов на 3% (Суммируется с другими аналогичными улучшениями)
 Cost_Comands=5
 Cost_Money=1000
 Bonus=3
@@ -74,9 +97,11 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\6.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\6-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\6-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\6-PurchasedActive.png
+
 [Upgrade-7]
+Type=UpChanceSearchArtsCount
 Name=Закупить детекторы Отклик
-Desc=Детекторы Отклик. Дешево и сердито, но шансы на удачный поиск значительно возрастают! Увеличивает успех поиска артефактов на 10%
+Desc=Детекторы Отклик. Дешево и сердито, но шансы на удачный поиск значительно возрастают! Увеличивает успех поиска артефактов на 10% (Суммируется с другими аналогичными улучшениями)
 Cost_Comands=10
 Cost_Money=5000
 Bonus=10
@@ -85,9 +110,11 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\7.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\7-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\7-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\7-PurchasedActive.png
+
 [Upgrade-8]
+Type=UpChanceSearchArtsCount
 Name=Закупить детекторы Медведь
-Desc=Детектор Медведь. В умелых руках чуть ли не гарантия удачного поиска артефактов! Увеличивает успех поиска артефактов на 5%
+Desc=Детектор Медведь. В умелых руках чуть ли не гарантия удачного поиска артефактов! Увеличивает успех поиска артефактов на 5% (Суммируется с другими аналогичными улучшениями)
 Cost_Comands=12
 Cost_Money=10000
 Bonus=5
@@ -96,9 +123,11 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\8.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\8-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\8-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\8-PurchasedActive.png
+
 [Upgrade-9]
+Type=UpChanceSearchArtsCount
 Name=Закупить детекторы Велес
-Desc=Детекторы Велес позволяют даже мало опытным сталкерам показать себя в поиске артефактов. Увеличивает успех поиска артефактов на 5%
+Desc=Детекторы Велес позволяют даже мало опытным сталкерам показать себя в поиске артефактов. Увеличивает успех поиска артефактов на 5% (Суммируется с другими аналогичными улучшениями)
 Cost_Comands=14
 Cost_Money=20000
 Bonus=5
@@ -107,9 +136,11 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\9.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\9-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\9-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\9-PurchasedActive.png
+
 [Upgrade-10]
+Type=UpChanceSearchArtsCount
 Name=Закупить детекторы Сварог
-Desc=Это максимум среди детекторов. Даже новичок на Свалке способен найти артефакт используя его. Увеличивает успех поиска артефактов на 5%
+Desc=Это максимум среди детекторов. Даже новичок на Свалке способен найти артефакт используя его. Увеличивает успех поиска артефактов на 5% (Суммируется с другими аналогичными улучшениями)
 Cost_Comands=16
 Cost_Money=50000
 Bonus=5
@@ -118,9 +149,11 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\10.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\10-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\10-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\10-PurchasedActive.png
+
 [Upgrade-11]
+Type=UpCRCountComming
 Name=Создание штаба
-Desc=Всем руководящим лицам необходимо иметь четкую связь друг с другом! Дает +2 к КР ежеходно.
+Desc=Всем руководящим лицам необходимо иметь четкую связь друг с другом! Дает +2 к КР ежеходно (Суммируется с другими аналогичными улучшениями)
 Cost_Comands=10
 Cost_Money=1000
 Bonus=2
@@ -129,9 +162,11 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\11.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\11-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\11-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\11-PurchasedActive.png
+
 [Upgrade-12]
+Type=UpCRCountComming
 Name=Создание командования
-Desc=Кадры, как говорится, решают всё. Самые опытные, самые способные. Дает +3 к КР ежеходно.
+Desc=Кадры, как говорится, решают всё. Самые опытные, самые способные. Дает +3 к КР ежеходно (Суммируется с другими аналогичными улучшениями)
 Cost_Comands=15
 Cost_Money=2000
 Bonus=3
@@ -140,9 +175,11 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\12.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\12-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\12-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\12-PurchasedActive.png
+
 [Upgrade-13]
+Type=UpCRCountComming
 Name=Структурная цепочка командования
-Desc=Маршал ни когда не дает приказа рядовому напрямую. Должна быть цепочка командования для управления большим числом бойцов. Дает +4 к КР ежеходно.
+Desc=Маршал ни когда не дает приказа рядовому напрямую. Должна быть цепочка командования для управления большим числом бойцов. Дает +4 к КР ежеходно (Суммируется с другими аналогичными улучшениями)
 Cost_Comands=20
 Cost_Money=3000
 Bonus=4
@@ -151,9 +188,11 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\13.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\13-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\13-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\13-PurchasedActive.png
+
 [Upgrade-14]
+Type=UpCRCountComming
 Name=Оптимизация цепочки команд
-Desc=Приспособленцев и прочих лентяев - прочь. Только полезные и необходимые люди. Строго, четко, конкретно. Ни каких излишеств. Дает +5 к КР ежеходно.
+Desc=Приспособленцев и прочих лентяев - прочь. Только полезные и необходимые люди. Строго, четко, конкретно. Ни каких излишеств. Дает +5 к КР ежеходно (Суммируется с другими аналогичными улучшениями)
 Cost_Comands=25
 Cost_Money=4000
 Bonus=5
@@ -162,9 +201,11 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\14.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\14-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\14-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\14-PurchasedActive.png
+
 [Upgrade-15]
+Type=UpCRCountComming
 Name=Группа быстрого реагирования
-Desc=График дежурств для командирского состава. Штаб 24/7 должен быть на связи и знать что делать! Дает +6 к КР ежеходно.
+Desc=График дежурств для командирского состава. Штаб 24/7 должен быть на связи и знать что делать! Дает +6 к КР ежеходно (Суммируется с другими аналогичными улучшениями)
 Cost_Comands=30
 Cost_Money=5000
 Bonus=6
@@ -173,7 +214,9 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\15.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\15-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\15-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\15-PurchasedActive.png
+
 [Upgrade-16]
+Type=UpPartCountAfterKillMuntant
 Name=Курсы охотника
 Desc=Мутанты. Нужно не только знать как с ними бороться, но и как из этого извлечь выгоду. Увеличивает число добытых частей в 2 раза с каждого монстра
 Cost_Comands=10
@@ -184,7 +227,9 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\16.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\16-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\16-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\16-PurchasedActive.png
+
 [Upgrade-17]
+Type=UpCashCountAfterKillStalker
 Name=Тщательный сбор хабара
 Desc=Обыск, взломы ПДА, нахождение хабара в тайниках по меткам и так далее... Увеличивает число добытого хабара в 2 раза с каждого сталкера
 Cost_Comands=15
@@ -195,7 +240,9 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\17.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\17-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\17-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\17-PurchasedActive.png
+
 [Upgrade-18]
+Type=UpChanceCountForReconnaissance
 Name=ПНВ для разведки
 Desc=Иметь глаза на базе противника это хорошо, но надо, чтобы эти глаза еще всё видели ночью, так как противник может скрывать свои передвижения в сумраке Зоны. Увеличивает шанс успеха операции на 10%
 Cost_Comands=10
@@ -206,7 +253,9 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\18.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\18-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\18-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\18-PurchasedActive.png
+
 [Upgrade-19]
+Type=DownCountCRForKillMutants
 Name=Стандартизация тактики зачистки
 Desc=Опыт зачистки территории показывает, что мутанты имеют определённые модели поведения. Нам нужно подстроить тактики под их поведение и командирам не потребуется постоянно контролировать ситуацию. Цена зачистки снижается на 2 КР
 Cost_Comands=15
@@ -217,7 +266,9 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\19.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\19-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\19-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\19-PurchasedActive.png
+
 [Upgrade-20]
+Type=DownCountCRForMoveAndBattle
 Name=Инструктаж при найме бойцов
 Desc=Инструктаж при найме бойцов может снизить вмешательство командиров в такие операции как "Передислокация", "Разведка боем" и "Захват". Бойцы уже при найме будут знать что к чему. Это снизит цену на 1 КР каждой операции
 Cost_Comands=10
@@ -228,7 +279,9 @@ Logo-NonActive=data\campanings\shoc\gfx\icons\technologies\20.png
 Logo-Active=data\campanings\shoc\gfx\icons\technologies\20-Active.png
 Logo-Purchased=data\campanings\shoc\gfx\icons\technologies\20-Purchased.png
 Logo-PurchasedActive=data\campanings\shoc\gfx\icons\technologies\20-PurchasedActive.png
+
 [Upgrade-21]
+Type=DownCountCRForReconnaissance
 Name=Формирование разведотряда
 Desc=Если группировка использует разведчиков довольно часто, то было бы эффективно создать отряд, который будет готовиться заранее к операциям. Это снизит в 2 раза цену отправки бойца в КР 
 Cost_Comands=10
