--- a/data/campanings/scs/scenarios/3Limansk/Settings.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Settings.ini
@@ -47,9 +47,9 @@ ScenarioLogo-Standart=data\campanings\scs\gfx\Scenario_Logo_Border.png
 ScenarioLogo-Active=data\campanings\scs\gfx\Scenario_Logo_Border-Active.png
 Achievements=True
 AchievementsCount = 4
-EventsRandom=True
+EventsRandomDefault=True
 EventsRandomCanChange=True
-EventsStory=True
+EventsStoryDefault=True
 EventsStoryCanChange=False
 CountZones=32
 BurstDefault=True								
