Исправления в Events-special

--- a/data/campanings/scs/scenarios/3Limansk/Events_Special.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Events_Special.ini
@@ -40,3 +40,6 @@ Name= Бойцы разочарованы
 Desc-YES= У нас проблема с не хваткой продуктов! От нас ушло некоторое число бойцов
 SoundFXForOwner = True
 SoundFXForOwnerFile = data\sfx\message.mp3
+NotWorkFractionCount = 2
+Fraction1 = 0
+Fraction2 = 17
