--- a/data/campanings/scs/scenarios/3Limansk/Settings.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Settings.ini
@@ -148,30 +148,32 @@ World-Border-Resources=data\campanings\shoc\gfx\interface\Border.png
 World-Border-Bottom=data\campanings\shoc\gfx\interface\Border.png
 World-Border-Left=data\campanings\shoc\gfx\interface\Border.png
 World-Border-Right=data\campanings\shoc\gfx\interface\Border.png
+World-SpecialButtons-Panel=data\gfx\Hint_Fon.png
+World-MapFilters-Panel=data\gfx\Hint_Fon.png
 ScenarioSettings-Fon=data\campanings\shoc\gfx\interface\Menu_Fon.png
-ZonaInfo-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
-GroupsRating-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
-Spy-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
-Diplomacy-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
-Market-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
-SearchArts-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
-BuyUnits-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
-Stock-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
-SelectTrader-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
-KillingMutants-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
-Upgrades-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
+ZonaInfo-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
+GroupsRating-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
+Spy-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
+Diplomacy-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
+Market-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
+SearchArts-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
+BuyUnits-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
+Stock-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
+SelectTrader-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
+KillingMutants-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
+Upgrades-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
 Trading-Fon=data\campanings\shoc\gfx\interface\MenuFon_500x500.png
-Rating-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
-ArmyMove-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
-AtackResult-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
-AtackEnd-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
-KillMutants-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
-ZonaMoreInfo-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
+Rating-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
+ArmyMove-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
+AtackResult-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
+AtackEnd-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
+KillMutants-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
+MoreInfo-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
 Events-Fon=data\campanings\shoc\gfx\interface\MenuFon_700x700.png
 Dialog-Fon=data\campanings\shoc\gfx\interface\MenuFon_700x700.png
-End-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
-Rearm-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
-Report-Fon=data\campanings\shoc\gfx\interface\MenuFon_1000x700.png
+End-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
+Rearm-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
+Report-Fon=data\campanings\shoc\gfx\interface\MenuFon_1200x700.png
 ;;;;;;;;;;;;;;;;;;;;;;;
 ;; Какие-либо значки ;;
 ;;;;;;;;;;;;;;;;;;;;;;;
