Исправил баг с значками группировок

--- a/data/campanings/scs/scenarios/3Limansk/Main.ini
+++ b/data/campanings/scs/scenarios/3Limansk/Main.ini
@@ -674,36 +674,36 @@ Monolith4-Weapon=SGI
 Monolith4-Armor=Stalker-4
 
 Renegats1-Name=Опытный
-Renegats1-Img=data\campanings\shoc\gfx\icons\units\Freelancers\1.png
+Renegats1-Img=data\campanings\shoc\gfx\icons\units\Renegats\1.png
 Renegats1-Weapon=MP5
 Renegats1-Armor=Freelancers-1
 Renegats2-Name=Ветеран
-Renegats2-Img=data\campanings\shoc\gfx\icons\units\Freelancers\3.png
+Renegats2-Img=data\campanings\shoc\gfx\icons\units\Renegats\3.png
 Renegats2-Weapon=AKM
 Renegats2-Armor=Freelancers-2
 Renegats3-Name=Мастер
-Renegats3-Img=data\campanings\shoc\gfx\icons\units\Freelancers\9.png
+Renegats3-Img=data\campanings\shoc\gfx\icons\units\Renegats\9.png
 Renegats3-Weapon=TPC
 Renegats3-Armor=Freelancers-3A
 Renegats4-Name=Легенда
-Renegats4-Img=data\campanings\shoc\gfx\icons\units\Freelancers\5.png
+Renegats4-Img=data\campanings\shoc\gfx\icons\units\Renegats\5.png
 Renegats4-Weapon=GP
 Renegats4-Armor=Freelancers-4
 
 ClearSky1-Name=Опытный
-ClearSky1-Img=data\campanings\shoc\gfx\icons\units\Freelancers\1.png
+ClearSky1-Img=data\campanings\shoc\gfx\icons\units\ClearSky\1.png
 ClearSky1-Weapon=MP5
 ClearSky1-Armor=Freelancers-1
 ClearSky2-Name=Ветеран
-ClearSky2-Img=data\campanings\shoc\gfx\icons\units\Freelancers\3.png
+ClearSky2-Img=data\campanings\shoc\gfx\icons\units\ClearSky\3.png
 ClearSky2-Weapon=AKM
 ClearSky2-Armor=Freelancers-2
 ClearSky3-Name=Мастер
-ClearSky3-Img=data\campanings\shoc\gfx\icons\units\Freelancers\9.png
+ClearSky3-Img=data\campanings\shoc\gfx\icons\units\ClearSky\9.png
 ClearSky3-Weapon=TPC
 ClearSky3-Armor=Freelancers-3A
 ClearSky4-Name=Легенда
-ClearSky4-Img=data\campanings\shoc\gfx\icons\units\Freelancers\5.png
+ClearSky4-Img=data\campanings\shoc\gfx\icons\units\ClearSky\5.png
 ClearSky4-Weapon=GP
 ClearSky4-Armor=Freelancers-4
 
